Documentation: Add SMP API changes

--- a/doc/api/training/smp_versions/v1_1_0.rst
+++ b/doc/api/training/smp_versions/v1_1_0.rst
@@ -1,6 +1,6 @@
 
-Version 1.1.0 (Latest)
-======================
+Version 1.1.0
+=============
 
 To use the library, reference the Common API documentation alongside the framework specific API documentation.
 
